--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "webpack": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
